cabal-version:       2.2
name:                HsYAML-compat-builder
version:             0.1.0.0
license:             GPL-2.0-or-later
license-file:        LICENSE.GPLv2
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
copyright:           2018-2019 Herbert Valerio Riedel
-- category:
-- synopsis:
-- description:

build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/hvr/HsYAML-compat-builder.git

library
  exposed-modules: Data.YAML.Builder
  build-depends:
    , HsYAML      ^>= 0.2
    , aeson       ^>= 1.4.0.0
    , base         >= 4.5 && < 4.13
    , bytestring  ^>= 0.9.2.1 || ^>= 0.10.0.2
    , containers   >=0.4.2 && <0.7
    , mtl         ^>= 2.2.1
    , scientific  ^>= 0.3.6.2
    , text        ^>= 1.2.3
    , unordered-containers ^>= 0.2
    , vector      ^>= 0.12.0.2

  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    RecordWildCards Trustworthy
  ghc-options: -Wall
